--- a/README
+++ b/README
@@ -2,29 +2,41 @@ The Little Library is an open source application that allows you to upload,
 store, and share creative commons licensed content across computers and 
 digital devices, offline and in the cloud. This is the Beta Version. The 
 Little Library was built as a peer-to-peer sharing distributed platform 
-for storing/sharing Open Licensed content (videos, audio,
-books, notes, courses, and pictures) for use in educational settings around
-the world, where offline learning libraries, and automated peer-to-peer 
+for storing/sharing Open Licensed content (videos, audio, books, notes, 
+courses, and pictures) for use in educational settings around the world, 
+where offline learning libraries, and automated peer-to-peer 
 replication of content will hopefully help to make constructivist forms of 
 learning more widespread. 
 
 The Little Library is built on CouchDB, JQuery, and JQuery Mobile, along 
-with a small PHP proxy. To try it out, you'll need to do the following:
+with a small PHP proxy, and uses Mikeal's CouchApp Takeout for installation. 
 
-1.  Download a version of CouchDB above 1.1 from 
+To try it out, just go to:
+http://library.ic.tl/library/_design/takeout/install.html
+
+
+Or if you don't like easy installations and you'd rather work for it,
+you can install your own CouchDB and Little Library by doing the following:
+
+1.  Download a version of CouchDB above 1.3 from 
 http://www.couchbase.com/downloads/
 and install it.
 
 2.	In a Web browser, go to the following address: 
 http://127.0.0.1:5984/_utils/index.html
 
-3.	Create a new database called "library".
+3.	Click on the bottom right of the page to set up a new Admin 
+(Admin Party, Fix This!), and set up a new Admin with the username and 
+password of your choice (username can contain only lowercase letters and 
+numbers, password should begin with a letter).
 
-4.	In a Web browser, go the following address: 
+4.	Create a new database called "library".
+
+5.	In a Web browser, go to the following address: 
 http://127.0.0.1:5984/_utils/replicator.html 
 
-5.	Replicate changes from: Remote Database 
-http://rwadholm.iriscouch.com/newlibrary 
+6.	Replicate changes from: Remote Database 
+http://library.ic.tl/library
 (Paste this address into the box)
 
 Replicate changes to: Local Database
@@ -32,17 +44,12 @@ library (Paste the word library into the box)
 
 Click on the "Replicate" button.
 
-6.	Click on the bottom right of the page to set up a new Admin 
-(Admin Party, Fix This!), and set up a new Admin with the username and 
-password of your choice (username can contain only lowercase letters and 
-numbers, password should begin with a letter)..
-
 7.	Click on "Overview" on the top left.
 
 8.	Click on "_users".
 
 9.	Click on the link that says "org.couchdb.user:username" (with your 
-username there)
+username instead of the word "username")
 
 10.	Click "Delete Document" on the top.
 
@@ -62,8 +69,9 @@ can use the library to sync two or more accounts as well. Just go to sync from s
 else's library (set to continuous sync), and ask them sync from yours (set to 
 continuous sync). Now if either of you make any changes to your online or offline
 libraries, the other libraries will be synced as soon as all libraries are 
-connected via the internet again. Whoever has made the newest changes will win if
-there is a conflict. 
+connected via the internet again. If there is a conflict between two different
+updates, the earliest update will win (and the other will be saved as a previous
+version). 
 
 If you want to build your own Little Library based application, feel free to. All of
 the software is released under MIT, Apache 2.0, and/or GPL licenses. 
@@ -72,5 +80,5 @@ You'll just need to change the variables in the top of the library.js file (line
 & 13), and several variables in the signup.php file (lines 15, 16, 21, 83 & 84). Then you'll 
 put signup.php onto a server, set up a couchdb online somewhere and locally. On your 
 couchdb, you can either just replicate with The Little Library template at 
-rwadholm.irischouch.com/library, or you can upload all of these files into a design document
-other than signup.php and build away. 
+library.ic.tl/library, or you can upload all of these files (other than signup.php) into a 
+design document and build away. 
