--- a/README
+++ b/README
@@ -19,8 +19,8 @@ Or if you don't like easy installations and you'd rather work for it,
 you can install your own CouchDB and Little Library by doing the following:
 
 1.  Download a version of CouchDB above 1.3 from 
-http://www.couchbase.com/downloads/
-and install it.
+http://www.couchbase.com/downloads/ or grab the latest (>=1.1) official Apache 
+CouchDB at http://couchdb.apache.org/downloads.html and install it.
 
 2.	In a Web browser, go to the following address: 
 http://127.0.0.1:5984/_utils/index.html
