--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-mThe Little Library is an open source application that allows you to upload, 
+The Little Library is an open source application that allows you to upload, 
 store, and share creative commons licensed content across computers and 
 digital devices, offline and in the cloud. This is the Beta Version. The 
 Little Library was built as a peer-to-peer sharing distributed platform 
